--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -1,26 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-html {
-    font-family: "Montserrat", serif;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
+    font-family: "Montserrat", serif;
 }
 
 body {
-    background-color: rgba(215, 236, 255, 0.8118);
     min-height: 100vh;
+    background-color: #d0c3d8;
 }
 
 /* Navbar */
 .navbar {
     display: flex;
     align-items: center;
-    background-color: rgba(215, 236, 255, 0.8118);
+    background-color: #879eb2;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -49,25 +45,26 @@ body {
     height: auto;
     margin-left: 20px;
     margin-right: 20px;
+    margin-top: 5px;
 }
 
 .navbar-item.hero {
-    background-color: #f5f4de;
+    background-color: rgba(215, 236, 255, 0.8118);
     color: #000000;
 }
 
 .navbar-item.about {
-    background-color: #d5e6f5;
+    background-color: #d0c3d8;
     color: #000000;
 }
 
 .navbar-item.prizes {
-    background-color: #edffea;
+    background-color: #f5f4de;
     color: #000000;
 }
 
 .navbar-item.faq {
-    background-color: #e3e3ff;
+    background-color: #edffea;
     color: #000000;
 }
 
@@ -78,6 +75,8 @@ body {
 
 /* Hero */
 #hero {
+    background-color: rgba(215, 236, 255, 0.8118);
+    z-index: 0;
     text-align: center;
     padding: 50px 20px;
     position: relative;
@@ -212,7 +211,7 @@ body {
 /* Hero Decorations */
 .hero-decorations {
     position: absolute;
-    top: 0;
+    top: 0vh;
     left: 0;
     width: 100%;
     height: 100%;
@@ -263,7 +262,7 @@ body {
 
 /* About */
 #about {
-    background-color: #879eb2;
+    background-color: #d0c3d8;
     padding-inline: 30px;
     padding-block: 80px;
     display: flex;
@@ -305,7 +304,6 @@ body {
         #e9d7ff 83%,
         #ffcccd 100%
     );
-    /* margin-top: -20px; */
 }
 
 .about-header h1 {
@@ -381,7 +379,7 @@ body {
 /* About decoration */
 .about-decorations {
     position: absolute;
-    top: 100;
+    top: 100vh;
     left: 0;
     width: 100%;
     height: 100%;
@@ -393,7 +391,7 @@ body {
 }
 
 .about-decorations .lighting {
-    top: 59%;
+    bottom: -12%;
     right: 5%;
     width: 300px;
 }
@@ -402,7 +400,8 @@ body {
 #champion-prizes {
     min-height: 100vh;
     padding: 50px 30px;
-    background-color: #f8f5f2;
+    /* background-color: #f8f5f2; */
+    background-color: #f5f4de;
     text-align: center;
 }
 
@@ -459,7 +458,7 @@ body {
 
 .prizes-decorations {
     position: absolute;
-    top: 200;
+    top: 200vh;
     left: 0;
     width: 100%;
     height: 100%;
@@ -471,7 +470,7 @@ body {
 }
 
 .prizes-decorations .sparkle1 {
-    top: 13%;
+    top: -7%;
     left: 33%;
     width: 250px;
 }
@@ -540,7 +539,7 @@ body {
     border-radius: 10px;
 }
 
-.prize-detail{
+.prize-detail {
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -548,12 +547,12 @@ body {
     padding-bottom: 10px;
 }
 
-.prize-detail img{
+.prize-detail img {
     width: 30px;
     height: auto;
 }
 
-.prize-detail p{
+.prize-detail p {
     font-weight: bolder;
 }
 
@@ -574,7 +573,7 @@ body {
 
 /* Why Should Join Us */
 #why-join {
-    background-color: #FFE7E7;
+    background-color: #ffe7e7;
     padding: 70px 30px;
     text-align: center;
     min-height: 100vh;
@@ -627,7 +626,7 @@ body {
     gap: 10px;
 }
 
-.why-card img{
+.why-card img {
     width: 40px;
     height: auto;
 }
@@ -639,4 +638,559 @@ body {
     color: black;
     margin-top: 10px;
     text-align: center;
+}
+
+/* FAQ */
+#faq {
+    height: 100vh;
+    background-color: #edffea;
+    padding: 50px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.faq-header {
+    background: linear-gradient(
+        to left,
+        #fffcc8,
+        #d4ffc8,
+        #d7ecff,
+        #e9d7ff,
+        #ffcccd
+    );
+    width: 90vw;
+    padding: 10px;
+    border: 1.5px solid black;
+    margin-bottom: 70px;
+    text-align: center;
+}
+
+.faq-header h1 {
+    font-size: 45px;
+}
+
+.faq-container {
+    width: 70%;
+    max-height: 350px;
+    overflow-y: auto;
+    padding-right: 10px;
+}
+
+.faq-content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.faq-item {
+    width: 100%;
+    background-color: white;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.faq-question {
+    width: 100%;
+    background-color: white;
+    border: none;
+    padding: 20px 40px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: left;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrow {
+    transition: transform 0.3s ease-in-out;
+}
+
+.arrow img {
+    width: 25px;
+    height: auto;
+}
+
+.faq-answer {
+    display: none;
+    padding: 15px;
+    font-size: 15px;
+    color: black;
+    background-color: #cae3fd;
+    padding: 20px 40px;
+}
+
+.faq-item.active .faq-answer {
+    display: block;
+}
+
+.faq-item.active .arrow {
+    transform: rotate(180deg);
+}
+
+.faq-hidden {
+    display: none;
+}
+
+.faq-hidden .faq-item {
+    margin-top: 15px;
+}
+
+.faq-hidden .faq-item:first-child {
+    margin-top: 0px;
+}
+
+.faq-more {
+    font-size: 14px;
+    text-decoration: underline;
+    cursor: pointer;
+    color: black;
+    margin-top: 20px;
+}
+
+/* Scroll Bar */
+.faq-container::-webkit-scrollbar {
+    width: 8px;
+    background: transparent;
+}
+
+.faq-container::-webkit-scrollbar-thumb {
+    background: rgba(109, 169, 228, 0.6);
+    border-radius: 10px;
+}
+
+.faq-container::-webkit-scrollbar-thumb:hover {
+    background: rgba(109, 169, 228, 0.8);
+}
+
+/* FAQ Decorations */
+.faq-decorations {
+    position: absolute;
+    top: 400vh;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.faq-decorations .decoration {
+    position: absolute;
+}
+
+.faq-decorations .questionmark {
+    top: 0%;
+    right: 20%;
+    width: 280px;
+}
+
+.faq-decorations .sparkle1 {
+    top: 13%;
+    left: 3%;
+    width: 280px;
+}
+
+.faq-decorations .smileysparkle {
+    bottom: -25%;
+    left: 2%;
+    width: 200px;
+}
+
+/* Media Partner */
+#media-partner {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+    background-color: #fff2de;
+    padding: 100px 0;
+}
+
+.media-header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+.ribbon {
+    position: absolute;
+    width: 80%;
+    max-width: 600px;
+    z-index: 0;
+}
+
+.media-title {
+    position: relative;
+    z-index: 1;
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 10px 20px;
+}
+
+.media-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.logo-track {
+    display: flex;
+    gap: 30px;
+    white-space: nowrap;
+}
+
+.logos {
+    display: flex;
+    gap: 40px;
+    flex-wrap: nowrap;
+}
+
+.logo-box {
+    width: 220px;
+    height: 120px;
+    background: white;
+    border: 2px dashed gray;
+    border-radius: 12px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    position: relative;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.logo-header {
+    width: 100%;
+    height: 24px;
+    background: linear-gradient(
+        to right,
+        #ffcccd,
+        #e9d7ff,
+        #d7ecff,
+        #d4ffc8,
+        #fffcc8
+    );
+    border-bottom: 2px solid gray;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 10px;
+    margin: 0;
+}
+
+.logo-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.browser-buttons {
+    display: flex;
+    gap: 5px;
+}
+
+.browser-buttons div {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+
+.yellow {
+    background: #ffce48cf;
+    border: 1.5px solid grey;
+}
+.red {
+    background: #f2b894;
+    border: 1.5px solid grey;
+}
+.green {
+    background: #edffea;
+    border: 1.5px solid grey;
+}
+
+.logo-img img {
+    width: 80px;
+    height: auto;
+    object-fit: contain;
+}
+
+/* Animation*/
+.track-1 {
+    animation: scroll-right 15s linear infinite;
+}
+
+.track-2 {
+    animation: scroll-left 15s linear infinite;
+}
+
+@keyframes scroll-right {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-50%);
+    }
+}
+
+@keyframes scroll-left {
+    from {
+        transform: translateX(-50%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+/* Contact Us */
+#contact-us {
+    min-height: 100vh;
+    background-color: #d0c3d8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.contact-header h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    text-shadow: 5px 5px 0 black, -2.5px 2.5px 0 black, 2.5px -2.5px 0 black,
+        -2.5px -2.5px 0 black;
+}
+
+.contact-title {
+    margin-bottom: 30px;
+}
+
+.contact-container {
+    width: 60%;
+    height: 350px;
+    padding: 20px;
+    background: linear-gradient(to right, #f9c5d1, #c8d6f3);
+    border-radius: 15px;
+    box-shadow: 10px 10px black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group label {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.input-group img {
+    width: 25px;
+    height: auto;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    gap: 50px;
+}
+
+.form-left,
+.form-right {
+    width: 48%;
+}
+
+.input-group {
+    margin-bottom: 40px;
+    text-align: left;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background-color: #f9f6ce;
+    box-shadow: 5px 5px black;
+}
+
+textarea {
+    height: 120px;
+    resize: none;
+}
+
+.submit-btn {
+    background-color: #a39d4e;
+    color: white;
+    padding: 10px 55px;
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 15px;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.submit-btn:hover {
+    background-color: #8c7a4a;
+}
+
+/* Pop Up */
+.popup {
+    display: none;
+    position: fixed;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 10px 20px 10px 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.popup-content {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.popup-icon {
+    width: 30px;
+    height: 30px;
+}
+
+/* Test Show Pop Up */
+/* .popup {
+    display: block !important;
+    opacity: 1 !important;
+} */
+
+/* Contact Us Decorations */
+.contactus-decorations {
+    position: absolute;
+    top: 600vh;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.contactus-decorations .decoration {
+    position: absolute;
+}
+
+.contactus-decorations .tag {
+    top: 2%;
+    left: 16%;
+    width: 300px;
+}
+
+.contactus-decorations .sparkle {
+    top: 5%;
+    right: 21%;
+    width: 250px;
+}
+
+/* Footer */
+footer {
+    background-color: #223448;
+    color: white;
+    padding: 20px 50px;
+    text-align: center;
+    position: relative;
+    border-radius: 100px 100px 0 0;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 100%;
+    padding: 10px 50px;
+    flex-wrap: wrap;
+}
+
+.footer-left {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    flex: 1;
+    min-width: 250px;
+}
+
+.footer-left img {
+    margin-left: 30px;
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    flex: 1;
+    min-width: 250px;
+    gap: 20px;
+}
+
+.footer-left p,
+.footer-right p {
+    font-size: 15px;
+    font-weight: 550;
+}
+
+.bncc-logo {
+    max-width: 150px;
+    margin: 10px 0;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: right;
+    gap: 12px;
+}
+
+.social-icons img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    transition: transform 0.3s;
+}
+
+.social-icons img:hover {
+    transform: scale(1.1);
+}
+
+.footer-bottom {
+    font-size: 13px;
+    margin-top: 20px;
+    color: white;
+}
+
+.footer-links a {
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin-bottom: 5px;
 }
